# DCSinge

./: CMakeLists.txt  README.md  dc.sh
data/: singe.cfg
data/spacerocks/singe/spacerocks/: game.singe
src/: singe_dreamcast.c
